# c-project-demo

./: CMakeLists.txt  README.md  config.h.in
cmd/: CMakeLists.txt  main.c
src/: CMakeLists.txt  demo.c  demo.h
src/include/: demo.h
src/mod1/: demo.c
src/mod2/: log.c  log.h
tests/: CMakeLists.txt  demo_testcase.cpp
